--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "sass": "^1.69.6",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
