--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "axios": "^1.6.3",
     "pinia": "^2.1.7",
     "sass": "^1.69.6",
     "vue": "^3.3.11",
