--- a/Client/package.json
+++ b/Client/package.json
@@ -14,7 +14,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "vitest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -49,6 +50,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
+    "vitest": "^1.6.0",
     "vue-tsc": "^1.8.25"
   }
 }
