--- a/Client/package.json
+++ b/Client/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "^1.6.3",
     "firebase": "^10.11.1",
+    "flowbite": "^2.3.0",
     "pinia": "^2.1.7",
     "sass": "^1.69.6",
     "vue": "^3.3.11",
