--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@vuepic/vue-datepicker": "^9.0.0",
     "axios": "^1.6.3",
     "firebase": "^10.11.1",
     "pinia": "^2.1.7",
