--- a/Client/package.json
+++ b/Client/package.json
@@ -23,11 +23,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
-    "@vuepic/vue-datepicker": "^9.0.0",
+    "@primevue/themes": "^4.0.0",
     "axios": "^1.6.3",
     "firebase": "^10.11.1",
     "pinia": "^2.1.7",
+    "primevue": "^4.0.0",
     "sass": "^1.69.6",
+    "tailwindcss-primeui": "^0.3.4",
+    "v-calendar": "^3.1.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
